plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.5.1'
    id 'checkstyle'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

javafx {
    version = '25.0.1'
    modules = [ 'javafx.controls' ]
}

checkstyle {
    toolVersion = '10.18.1'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

tasks.withType(Checkstyle).configureEach {
    configDirectory = file("${rootDir}/config/checkstyle")
    reports {
        html.required = true
        xml.required = false
    }
}

dependencies {
    String jUnitVersion = '5.14.4'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'
}

test {
    useJUnitPlatform()

    testLogging {
        events 'passed', 'skipped', 'failed'

        showExceptions = true
        exceptionFormat = 'full'
        showCauses = true
        showStackTraces = true
        showStandardStreams = false
    }
}

application {
    mainClass = 'thaisbot.gui.Launcher'
}

jar {
    // A lean JAR file (i.e., without the dependencies packaged inside) is not needed.
    enabled = false
    // Rename its output anyway; Gradle forbids it clashing with the shadowJar output file, even for a disabled task.
    archiveClassifier = 'without-dependencies'
}

shadowJar {
    archiveFileName = 'duke.jar'
}

run {
    standardInput = System.in
    jvmArgs '--enable-native-access=javafx.graphics'
}
